--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,10 @@
+html{
+	font-family: 'Balsamiq Sans', cursive;
+}
 h1{
 	text-align: left;/*выравнивание по сентру*/
+	font-family: 'Balsamiq Sans', cursive;
+	font-family: 'Anton', sans-serif;
 }
 h3{
 	font-style: italic;
